# LoRa_E5

./: .gitignore  .resume.txt  CLAUDE.md  scaffold_lora_e5.sh
modules/lora_e5/: CLAUDE.md  CMakeLists.txt  Kconfig
modules/lora_e5/docs/: Device_State_Machine.md  Phase1-Architecture.md  Phase2-Design-Notes.md  Phase3-ESP32S3-Bringup-Plan.md  VERIFICATION_NEEDED.md
modules/lora_e5/docs/diagrams/: layered_architecture.drawio  lorawan_fsm.drawio
modules/lora_e5/include/lora_e5/: lora_e5.h  lora_e5_at.h  lora_e5_config.h  lora_e5_events.h  lora_e5_types.h
modules/lora_e5/samples/device_node/: CMakeLists.txt  Kconfig  build.sh  prj.conf  sample.yaml
modules/lora_e5/samples/device_node/boards/: esp32s3_devkitc_procpu.overlay  status_led_mono.overlay  status_led_rgb.overlay
modules/lora_e5/samples/device_node/config/: settings_lorawan.yaml
modules/lora_e5/samples/device_node/kconfig/: Kconfig.settings_lorawan
modules/lora_e5/samples/device_node/scripts/: README.md  gen_settings_module.py
modules/lora_e5/samples/device_node/src/: main.c
modules/lora_e5/samples/device_node/src/autogen-code/: rpc_settings_lorawan.c  rpc_settings_lorawan.h  settings_lorawan.c  settings_lorawan.h  settings_lorawan_list.h
modules/lora_e5/samples/join/: CMakeLists.txt  build.sh  prj.conf  sample.yaml
modules/lora_e5/samples/join/boards/: esp32s3_devkitc_procpu.overlay
modules/lora_e5/samples/join/src/: main.c
modules/lora_e5/src/: lora_e5.c  lora_e5_at.c  lora_e5_cmd_queue.c  lora_e5_cmd_queue.h  lora_e5_events.c  lora_e5_fsm.c  lora_e5_hf_commands.c  lora_e5_hf_commands.h  lora_e5_internal.h  lora_e5_modem_manager.c  lora_e5_modem_manager.h  lora_e5_parser.c  lora_e5_uart.c
modules/lora_e5/tests/cmd_queue/: CMakeLists.txt  testcase.yaml
modules/lora_e5/tests/cmd_queue/src/: main.c
modules/lora_e5/tests/fsm/: CMakeLists.txt  testcase.yaml
modules/lora_e5/tests/fsm/src/: main.c
modules/lora_e5/tests/mock_uart/: mock_uart.c  mock_uart.h
modules/lora_e5/tests/modem_manager/: CMakeLists.txt  prj.conf  testcase.yaml
modules/lora_e5/tests/modem_manager/src/: main.c
modules/lora_e5/tests/parser/: CMakeLists.txt  testcase.yaml
modules/lora_e5/tests/parser/src/: main.c
modules/lora_e5/zephyr/: module.yml
modules/status_led/: CMakeLists.txt  Kconfig  README.md
modules/status_led/include/status_led/: status_led.h  status_led_hw.h  status_led_pattern.h
modules/status_led/samples/basic/: CMakeLists.txt  prj.conf  sample.yaml
modules/status_led/samples/basic/boards/: esp32s3_devkitc_procpu.overlay
modules/status_led/samples/basic/src/: main.c
modules/status_led/src/: status_led.c  status_led_pattern_engine.c  status_led_pattern_engine.h  status_led_patterns.c  status_led_patterns.h  status_led_priority.c  status_led_priority.h
modules/status_led/src/backends/: status_led_hw_gpio.c  status_led_hw_mono_gpio.c  status_led_hw_mono_pwm.c  status_led_hw_pwm.c  status_led_hw_ws2812.c
west-manifest/: west.yml
